FreeST/test/Programs/InvalidTests/SessionTypes/skip/skip.fst
main : (Skip, Skip)
main = new @Skip ()
